<resources>
    <string name="app_name">ProiectAndroidGolDigger</string>
    <string name="username">Username</string>
    <string name="pagina_signup">SignUp</string>
    <string name="password">Password</string>
    <string name="confirmpassword">ConfirmPassword</string>
    <string name="email">Email</string>
    <string name="button_sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="labelSignUp">Sign Up</string>
    <string name="live_score">Live Score</string>
    <string name="imagine_login">Imagine_login</string>
    <string name="eroare_email">Email invalid</string>
    <string name="eroare_parola">Parola invalida</string>
    <string name="eroare_confirm_password">Parolele nu coincid</string>
    <string name="eroare_utilizator">Email-ul exista deja</string>
    <string name="autentificare_reusita">Autentificarea a reusit</string>
    <string name="logIn_validare_utilizator">Email sau parola gresita</string>
    <string name="log_out">Log Out</string>
    <string name="null_email">Campul email este gol</string>
    <string name="parola_null">Campul lui password este null</string>
    <string name="textview_grupa">Grupa</string>
    <string name="textview_data">Data</string>
    <string name="textview_ora">Ora</string>
    <string name="textview_stadion">Stadion</string>
    <string name="textview_echipa_1">Echipa 1</string>
    <string name="textview_scor1">Scor 1</string>
    <string name="textview_scor2">Scor2</string>
    <string name="textview_echipa2">Echipa2</string>
    <string name="scor1">Scor1</string>
    <string name="echipa1">Echipa1</string>
    <string name="scor2">Scor2</string>
    <string name="echipa_2">Echipa 2</string>
    <string name="nume_jucator">Nume Jucator</string>
    <string name="minutul">Minutul</string>
    <string name="gol_echipa1">Gol Echipa1</string>
    <string name="gol_echipa2">Gol Echipa2</string>
    <string name="nume">Nume</string>
    <string name="pozitie">Pozitie</string>
    <string name="meciurijucate">MeciuriJucate</string>
    <string name="castigate">Castigate</string>
    <string name="egale">Egale</string>
    <string name="pierdute">Pierdute</string>
    <string name="gpentru">GPentru</string>
    <string name="gimpotriva">GImpotriva</string>
    <string name="punctaj">Punctaj</string>
    <string name="pozitie_in_clasament">Pozitie In Clasament</string>
    <string name="meciuri_jucate">Meciuri Jucate</string>
    <string name="meciuri_castigate">Meciuri Castigate</string>
    <string name="meciuri_la_egalitate">Meciuri la egalitate</string>
    <string name="meciuri_pierdute">Meciuri pierdute</string>
    <string name="goluri_date">Goluri Date</string>
    <string name="goluri_primite">Goluri primite</string>
    <string name="rezultat">Clasament</string>
    <string name="datatv">Data:</string>
    <string name="oratv">Ora:</string>
    <string name="stadionultv">Stadionul:</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="welcome">Bine ai venit, </string>
    <string name="sortare">Sortare</string>
    <string name="live">Live </string>
    <string name="score"> Score</string>
    <string name="nume_jucator2">Nume Jucator:</string>
    <string name="goluri">Goluri</string>
    <string name="enable_dark_mode">Enable dark mode</string>
    <string name="full_name">Full name</string>
    <string name="save">SAVE</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="player_3">Player 3</string>
    <string name="imagineptlogin">imaginePtLogin</string>
    <string name="imagineptsignup">imaginePtSignUp</string>
    <string name="imgineprofil">imgineProfil</string>
    <string name="enter_full_name">Enter full name</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="nume_utilizator">Nume utilizator</string>
    <string name="soccerplayer">soccerPlayer</string>
    <string name="imagineprofiltoolbar">imagineProfilToolbar</string>
    <string name="imagineclasamenttoolbar">imagineClasamentTOOLBAR</string>
    <string name="imaginehometoolbar">imagineHomeToolbar</string>
</resources>