<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewNumeJucator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:text="@string/nume_jucator"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toEndOf="@+id/tvnumejucator2"
        app:layout_constraintTop_toTopOf="@+id/tvnumejucator2" />

    <TextView
        android:id="@+id/textviewMinut"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:text="@string/minutul"
        app:layout_constraintStart_toEndOf="@+id/minutul2"
        app:layout_constraintTop_toTopOf="@+id/minutul2" />

    <TextView
        android:id="@+id/textviewGolEchipa1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/gol_echipa1"
        app:layout_constraintStart_toEndOf="@+id/goluritv"
        app:layout_constraintTop_toTopOf="@+id/textviewMinut" />

    <TextView
        android:id="@+id/textviewGolEchipa2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/gol_echipa2"
        app:layout_constraintStart_toEndOf="@+id/textviewGolEchipa1"
        app:layout_constraintTop_toTopOf="@+id/textviewGolEchipa1" />

    <TextView
        android:id="@+id/tvnumejucator2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/nume_jucator2"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/minutul2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="18dp"
        android:text="@string/minutul"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvnumejucator2" />

    <TextView
        android:id="@+id/goluritv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/goluri"
        app:layout_constraintStart_toEndOf="@+id/textviewMinut"
        app:layout_constraintTop_toTopOf="@+id/textviewMinut" />

</androidx.constraintlayout.widget.ConstraintLayout>