<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    style="@style/login_background"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/SignUpEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/custom_email_icon"
            android:drawableLeft="@drawable/custom_email_icon"
            android:drawablePadding="12dp"
            android:hint="@string/email"
            android:paddingStart="12dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:paddingLeft="12dp"
            android:textColor="#FFFFFF" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView"
        style="@style/login_font"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/pagina_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/SignUpPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/custom_password_icon"
            android:drawableLeft="@drawable/custom_password_icon"
            android:drawablePadding="12dp"
            android:hint="@string/password"
            android:paddingLeft="12dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:textColor="#FFFFFF"
            android:paddingStart="12dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/SignUpConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/custom_password_icon"
            android:drawableLeft="@drawable/custom_password_icon"
            android:drawablePadding="12dp"
            android:hint="@string/confirmpassword"
            android:paddingLeft="12dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:textColor="#FFFFFF"
            android:paddingStart="12dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/SignUpbutton"
        style="@style/first_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_button"
        android:text="@string/button_sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
        app:layout_constraintVertical_bias="0.051" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:contentDescription="@string/imagineptsignup"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUpbutton"
        app:srcCompat="@drawable/bg" />

</androidx.constraintlayout.widget.ConstraintLayout>